"Updated about.html with new content"

--- a/about.html
+++ b/about.html
@@ -2,18 +2,18 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Sammy Student | Work hard, play hard</title>
+    <title>Phani Student | Work smart and have fun</title>
     <link rel="stylesheet" href="stylesheets/sammy-style.css">
   </head>
   <body>
     <header>
-      <p><a href="index.html">Sammy Student</a></p>
+      <p><a href="index.html">Phani is an MBA Student at McDonough</a></p>
       <nav>
         <ul>
           <li><a href="about.html">About</a></li>
-          <li><a href="activities.html">Activities</a></li>
-          <li><a href="experience.html">Experience</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="activities.html">Activities include playing chess and tennis</a></li>
+          <li><a href="experience.html">Experience includes working some high-growth startups</a></li>
+          <li><a href="contact.html">Contact me at my student email</a></li>
         </ul>
       </nav>
     </header>
@@ -21,7 +21,7 @@
     <div class="page">
       <h1>About Me</h1>
       <p>
-        I'm from Connecticut. I'm passionate about computer science. I hope to create my own application software to change the world.
+        I'm from Hyderabad. I love to hike and play by the beach with my friends.
       </p>
       <img src="images/education_icons_IF-02-512.png" alt="an icon of a student with a mortarboard" />
     </div>
