--- a/index.html
+++ b/index.html
@@ -2,29 +2,29 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Sammy Student | Work hard, play hard</title>
+    <title>Phani - MBA Student @ McDonough| Work hard, play hard</title>
     <link rel="stylesheet" href="stylesheets/sammy-style.css">
   </head>
   <body>
     <header>
-      <p><a href="index.html">Sammy Student</a></p>
+      <p><a href="index.html">Phani </a></p>
       <nav>
         <ul>
           <li><a href="about.html">About</a></li>
-          <li><a href="activities.html">Activities</a></li>
-          <li><a href="experience.html">Experience</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="activities.html">Activities include playing chess and tennis</a></li>
+          <li><a href="experience.html">Experience includes working at some high-growth startups</a></li>
+          <li><a href="contact.html">Contact me via my student email </a></li>
         </ul>
       </nav>
     </header>
 
     <div class="page">
-      <h1>Sammy Student</h1>
-      <p>Welcome to my site.</p>
+      <h1>Phani Student</h1>
+      <p>Welcome to my beginner site.</p>
     </div>
 
     <footer>
-      <p>&copy; 2021 Sammy Student |
+      <p>&copy; 2025 Phani |
         <a href="https://github.com/prof-rossetti/student-site">source code</a>
       </p>
     </footer>
@@ -34,7 +34,7 @@
         //
         // FYI: this is JavaScript!
         //
-        var myMessage = "Hello World"
+        var myMessage = "Salaam Namaste World"
         console.log(myMessage)
 
 
